# hermes-openclaw-orchestrator

./: .gitignore  README.md  pyproject.toml  run.py  start.sh
agents/: cli_executor.py  openclaw_agent.py
api/: main.py  websocket.py
docs/: requirement.md  software-architecture-design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
frontend/src/: App.vue  style.css
frontend/src/components/: AgentCanvas.vue  DrawerPanel.vue  HistorySidebar.vue  StatusBar.vue  TaskInputBar.vue
frontend/src/composables/: useWebSocket.ts
frontend/src/nodes/: CustomEdge.vue  HermesNode.vue  OpenClawNode.vue  ToolNode.vue
frontend/src/stores/: dashboard.ts
frontend/src/types/: dashboard.ts
orchestrator/: engine.py  events.py
shared/: types.py
